<resources>
    <string name="app_name">MyRecyclerView</string>
    <string name="campus_name">Nama Kampus</string>
    <string name="description">Deskripsi</string>
    <string name="itb_desc">ITB adalah perguruan tinggi negeri yang sangat bergengsi di Indonesia, khususnya di bidang sains dan teknologi. Didirikan pada tahun 1920, ITB telah menjadi pionir dalam pengembangan pendidikan tinggi teknik di Indonesia dan terus berinovasi hingga saat ini.</string>
    <string-array name="data_name">
        <item>Institut Teknologi Bandung</item>
        <item>Institut Teknologi Nasional</item>
        <item>Universitas Kristen Maranatha</item>
        <item>UIN Sunan Gunung Djati</item>
        <item>Telkom University</item>
        <item>Universitas Komputer Indonesia</item>
        <item>Universitas Padjajaran</item>
        <item>Universitas Katolik Parahyangan</item>
        <item>Universitas Pasundan</item>
        <item>Universitas Pendidikan Indonesia</item>
    </string-array>
    <string name="itb">Institut Teknologi Bandung</string>
    <string name="itenas">Institut Teknologi Nasional</string>
    <string name="ukm">Universitas Kristen Maranatha</string>
    <string name="uin">UIN Sunan Gunung Djati</string>
    <string name="telu">Telkom University</string>
    <string name="unikom">Universitas Komputer Indonesia</string>
    <string name="unpad">Universitas Padjajaran</string>
    <string name="ukp">Universitas Katolik Parahyangan</string>
    <string name="unpas">Universitas Pasundan</string>
    <string name="upi">Universitas Pendikdikan Indionesia</string>
    <string name="fakultas_dan_program_studi">Fakultas dan Program Studi</string>
    <string name="itb_fakultas_capt">ITB terbagi menjadi beberapa fakultas dan sekolah, di antaranya :</string>
    <string name="fakultas_teknik">Fakultas Teknik</string>
    <string name="jurusan_teknik_itb">Teknik Mesin, Teknik Sipil, Teknik Elektro, Teknik Kimia, dan lain-lain.</string>
    <string name="fakultas_ilmu_dan_teknologi">Fakultas Ilmu dan Teknologi :</string>
    <string name="jurusan_ilmu_dan_teknologi_itb">Teknik Geologi, Teknik Geofisika, dan lain-lain.</string>
    <string name="fakultas_matematika_dan_ilmu_pengetahuan_alam">Fakultas Matematika dan Ilmu Pengetahuan Alam</string>
    <string name="jurusan_matematika_dan_ilmu_pengetahuan_alam">Matematika, Fisika, Kimia, dan lain-lain.</string>
    <string name="sekolah_ilmu_dan_teknologi_hayati">Sekolah Ilmu dan Teknologi Hayati</string>
    <string name="jurusan_sekolah_ilmu_dan_teknologi_hayati">Biologi, Bioteknologi, dan lain-lain.</string>
    <string name="sekolah_farmasi">Sekolah Farmasi</string>
    <string name="jurusan_farmasi">Farmasi</string>
    <string name="fakultas_seni_rupa_dan_desain">Fakultas Seni Rupa dan Desain</string>
    <string name="jurusan_seni_rupa_dan_desain">Desain Komunikasi Visual, Desain Produk, dan lain-lain.</string>
    <string name="sekolah_bisnis_dan_manajemen">Sekolah Bisnis dan Manajemen</string>
    <string name="jurusan_sekolah_bisnis_dan_manajemen">Manajemen</string>
    <string name="itenas_desc">Institut Teknologi Nasional (Itenas) adalah sebuah perguruan tinggi swasta yang berlokasi di Bandung, Jawa Barat, Indonesia. Kampus ini dikenal dengan fokusnya pada bidang teknologi, teknik, dan seni.</string>
    <string name="itenas_fakultas_capt">Itenas memiliki beberapa fakultas dan program studi yang mencakup berbagai bidang ilmu teknik dan non-teknik. Beberapa fakultas dan program studi yang ada di Itenas antara lain:</string>
    <string name="fakultas_teknik_sipil_dan_perencanaan">Fakultas Teknik Sipil dan Perencanaan (FTSP)</string>
    <string name="jurusan_teknik_sipil_dan_perencanaan_itenas">Teknik Sipil, Arsitektur, dan Perencanaan Wilayah dan Kota</string>
    <string name="fakultas_teknologi_industri_fti">Fakultas Teknologi Industri (FTI)</string>
    <string name="jurusan_teknologi_industri">Teknik Mesin, Teknik Elektro, Teknik Industri, Teknik Kimia</string>
    <string name="fakultas_teknik_geologi_ftg">Fakultas Teknik Geologi (FTG)</string>
    <string name="jurusan_teknik_geologi">Teknik Geologi</string>
    <string name="fakultas_seni_rupa_dan_desain_fsrd">Fakultas Seni Rupa dan Desain (FSRD)</string>
    <string name="jurusan_seni_rupa_dan_desain_itenas">Desain Komunikasi Visual, Desain Interior, Kriya Tekstil dan Mode</string>
    <string name="fakultas_teknologi_informasi_fti">Fakultas Teknologi Informasi (FTI)</string>
    <string name="jurusan_teknologi_informasi">Teknik Informartika, Sistem Informasi</string>
    <string name="ukm_desc">Universitas Kristen Maranatha adalah sebuah perguruan tinggi swasta Kristen yang berlokasi di Bandung, Jawa Barat, Indonesia. Kampus ini dikenal dengan komitmennya dalam menyediakan pendidikan tinggi yang berkualitas, integritas akademik, dan nilai-nilai Kristiani.</string>
    <string name="ukm_fakultas_capt">Universitas Kristen Maranatha memiliki beberapa fakultas dan program studi yang mencakup berbagai bidang ilmu. Beberapa fakultas dan program studi yang ada di Universitas Kristen Maranatha antara lain:</string>
    <string name="jurusan_teknik_ukm">Teknik Sipil, Teknik Elektro, Teknik Mesin, Teknik Industri, Teknik Informatika</string>
    <string name="fakultas_kedokteran">Fakultas Kedokteran</string>
    <string name="jurusan_kedokteran_ukm">Pendidikan Dokter, Profesi Dokter</string>
    <string name="fakultas_kedokteran_gigi">Fakultas Kedokteran Gigi</string>
    <string name="jurusan_kedoketeran_gigi">Pendidikan Dokter Gigi, Profesi Dokter Gigi</string>
    <string name="fakultas_psikologi">Fakultas Psikologi</string>
    <string name="jurusan_psikologi">Psikologi</string>
    <string name="jurusan_seni_rupa_dan_desain_ukm">Desain Komunikasi Sosial, Desain Interior, Kriya Tekstil dan Mode</string>
    <string name="fakultas_ekonomi">Fakultas Ekonomi</string>
    <string name="jurusan_ekonomi_ukm">Manajemen, Akuntansi</string>
    <string name="fakultas_hukum">Fakultas Hukum</string>
    <string name="jurusan_ilmu_hukum">Ilmu Hukum</string>
    <string name="jurusan_ilmu_sosial_dan_politik">Ilmu Komunikasi, Hubungan Internasional</string>
    <string name="fakultas_ilmu_sosial_dan_politik">Fakultas Ilmu Sosial dan Politik</string>
    <string name="fakultas_sastra">Fakultas Sastra</string>
    <string name="jurusan_sastra_ukm">Sastra Inggris, Sastra Jepang, Sastra Cina</string>
    <string name="uin_desc">Universitas Islam Negeri (UIN) Sunan Gunung Djati Bandung adalah salah satu perguruan tinggi negeri berbasis Islam yang terletak di Bandung, Jawa Barat, Indonesia. UIN ini merupakan salah satu UIN terkemuka di Indonesia dan memiliki fokus pada pengembangan ilmu pengetahuan yang terintegrasi dengan nilai-nilai keislaman.</string>
    <string name="telu_desc">Telkom University adalah sebuah perguruan tinggi swasta yang berfokus pada bidang teknologi informasi dan komunikasi (TIK). Didirikan pada tahun 2013, kampus ini dengan cepat tumbuh menjadi salah satu universitas swasta terbaik di Indonesia, khususnya dalam bidang TIK.</string>
    <string name="telu_fakultas_capt">Telkom University menawarkan berbagai program studi yang menarik, antara lain:</string>
    <string name="fakultas_teknik_elektro">Fakultas Teknik Elektro</string>
    <string name="jurusan_teknik_elektro_telu">Teknik Telekomunikasi, Teknik Elektro, Teknik Komputer, Teknik Fisika, Fakultas Informa</string>
    <string name="fakultas_informatika">Fakultas Informatika</string>
    <string name="jurusan_informatika_telui">Informatika, Rekayasa Perangkat Lunak, Sains Data, Keamanan Siber</string>
    <string name="fakultas_rekayasa_industri_fri">Fakultas Rekayasa Industri (FRI)</string>
    <string name="program_pascasarjana">Program Pascasarjana</string>
    <string name="ilmu_hukum">Ilmu Hukum</string>
    <string name="fakultas_ilmu_sosial_dan_ilmu_politik">Fakultas Ilmu Sosial dan Ilmu Politik</string>
    <string name="jurusan_mtk_ukp">Matematika, Fisika, Informatika</string>
    <string name="unpas_dsec">Universitas Pasundan (Unpas) adalah sebuah perguruan tinggi swasta terkemuka yang terletak di Bandung, Jawa Barat, Indonesia. Unpas memiliki sejarah panjang dan reputasi yang baik dalam bidang pendidikan tinggi.</string>
    <string name="fakultas_unpas_dsec">Unpas memiliki berbagai fakultas dan program studi yang mencakup berbagai bidang ilmu, antara lain:</string>
    <string name="jurusan_teknik_unpas">Teknik Sipil, Teknik Arsitektur, Teknik Mesin, Teknik Elektro, Teknik Industri</string>
    <string name="fakultas_ekonomi_dan_bisnis">Fakultas Ekonomi dan Bisnis</string>
    <string name="jurusan_feb_unpas">Akuntansi, Manajemen, Ekonomi Pembangunan</string>
    <string name="jurusan_ilmu_politik_unpas">Ilmu Administrasi Publik, Ilmu Administrasi Bisnis, Ilmu Komunikasi, Ilmu Hubungan Internasional</string>
    <string name="fakultas_keguruan_dan_ilmu_pendidikan">Fakultas Keguruan dan Ilmu Pendidikan</string>
    <string name="jurusan_keguruan_unpas">Pendidikan Bahasa dan Sastra Indonesia, Pendidikan Bahasa Inggris, Pendidikan Matematika, Pendidikan Fisika, Pendidikan Kimia, Pendidikan Biologi</string>
    <string name="fakultas_seni_dan_desain">Fakultas Seni dan Desain</string>
    <string name="jurusan_seni_design_unpas">Desain Komunikasi Visual, Desain Interior, Seni Rupa</string>
    <string name="pendidikan_dokter">Pendidikan Dokter</string>
    <string name="jurusan_pascarasrjan_unpas">Magister Manajemen, Magister Teknik, Magister Hukum, Doktor Ilmu Hukum</string>
    <string name="upi_desc">Universitas Pendidikan Indonesia (UPI) adalah sebuah perguruan tinggi negeri yang kampus utamanya terletak di Kota Bandung, Jawa Barat, Indonesia. UPI memiliki fokus utama pada bidang pendidikan dan keguruan, serta memiliki sejarah panjang dalam menghasilkan tenaga pendidik berkualitas di Indonesia.</string>
    <string name="fakultas_upi_desc">UPI memiliki berbagai fakultas dan program studi yang mencakup berbagai bidang ilmu, terutama dalam bidang pendidikan dan keguruan. Beberapa fakultas dan program studi yang ada di UPI antara lain:</string>
    <string name="jurusan_pendidikan_upi">Bimbingan dan Konseling, Pendidikan Luar Sekolah, Pendidikan Khusus, Teknologi Pendidikan</string>
    <string name="fakultas_pendidikan_bahasa_dan_sastra_fpbs">Fakultas Pendidikan Bahasa dan Sastra (FPBS)</string>
    <string name="fakultas_ilmu_pendidikan">Fakultas Ilmu Pendidikan</string>
    <string name="jurusan_pendidikan_sastra_upi">Pendidikan Bahasa Indonesia, Pendidikan Bahasa Inggris, Pendidikan Bahasa Arab, Pendidikan Bahasa Jepang</string>
    <string name="fakultas_pendidikan_matematika_dan_ilmu_pengetahuan_alam_fpmipa">Fakultas Pendidikan Matematika dan Ilmu Pengetahuan Alam (FPMIPA)</string>
    <string name="jurusan_fmipa_upi">Pendidikan Matematika, Pendidikan Fisika, Pendidikan Kimia, Pendidikan Biologi</string>
    <string name="fakultas_pendidikan_teknologi_dan_kejuruan_fptk">Fakultas Pendidikan Teknologi dan Kejuruan (FPTK)</string>
    <string name="jurusan_pendidikan_dan_teknologi_upi">Pendidikan Teknik Mesin, Pendidikan Teknik Elektro, Pendidikan Teknik Sipil, Pendidikan Tata Busana</string>
    <string name="fakultas_pendidikan_ilmu_sosial_fpips">Fakultas Pendidikan Ilmu Sosial (FPIPS)</string>
    <string name="jurusan_sosial_upi">Pendidikan Sejarah, Pendidikan Geografi, Pendidikan Ekonomi, Pendidikan Kewarganegaraan</string>
    <string name="fakultas_pendidikan_olahraga_dan_kesehatan_fpok">Fakultas Pendidikan Olahraga dan Kesehatan (FPOK)</string>
    <string name="jurusan_olahraga_upi">Pendidikan Jasmani, Pendidikan Kesehatan, Ilmu Keolahragaan</string>
    <string name="fakultas_seni_dan_desain_fsd">Fakultas Seni dan Desain (FSD)</string>
    <string name="jurusan_seni_upi">Pendidikan Seni Rupa, Pendidikan Seni Musik, Desain Komunikasi Visual</string>
    <string name="pascasarjana_upi">Magister dan Doktor dalam berbagai bidang pendidikan</string>
</resources>