<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itb"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".itb">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            android:src="@drawable/unpas"/>

        <TextView
            style="@style/title_campus"
            android:text="@string/unpas"/>

        <TextView
            style="@style/normal_text"
            android:text="@string/unpas_dsec"/>

        <TextView
            style="@style/heading2"
            android:text="@string/fakultas_dan_program_studi"/>

        <TextView
            style="@style/normal_text"
            android:text="@string/fakultas_unpas_dsec"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_teknik"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_teknik_unpas"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_ekonomi_dan_bisnis"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_feb_unpas"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_hukum"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/ilmu_hukum"/>
        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_ilmu_sosial_dan_ilmu_politik"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_ilmu_politik_unpas"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_keguruan_dan_ilmu_pendidikan"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_keguruan_unpas"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_seni_dan_desain"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_seni_design_unpas"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_matematika_dan_ilmu_pengetahuan_alam"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_mtk_ukp"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/fakultas_kedokteran"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/pendidikan_dokter"/>

        <TextView
            style="@style/normal_text"
            android:textStyle="bold"
            android:text="@string/program_pascasarjana"/>

        <TextView
            style="@style/normal_text"
            android:layout_marginTop="0dp"
            android:text="@string/jurusan_pascarasrjan_unpas"/>

    </LinearLayout>

</ScrollView>